--- a/addons/nf_simple_move/static/css/style.css
+++ b/addons/nf_simple_move/static/css/style.css
@@ -1,7 +1,15 @@
 table.wiz_simple_move{
 	margin: 20px;
+	width: 80%;
 }
 
+tr.oe_simple_move_form_hr{
+	border-top: 1px solid grey;
+	padding-bottom: 10px;
+	margin-bottom: 10px;
+	height: 10px;
+	min-height: 10px;
+}
 
 table.wiz_simple_move td{
 	padding-left: 10px;
