--- a/addons/nf_simple_move/wizard/simple_move.xml
+++ b/addons/nf_simple_move/wizard/simple_move.xml
@@ -135,10 +135,13 @@
 			</field>
 		</record>
 
-		<record model="ir.actions.client" id="action_client_simple_move">
+ 	<record model="ir.actions.client" id="action_client_simple_move">
 			<field name="name">Simple move action</field>
-			<field name="tag">simple_move.open</field>
+			<field name="tag">simple_move.reload</field>
+			<field name="params">{}</field>
 		</record>
+		
+		
 		<!-- <menuitem action="action_client_simple_move" id="menu_client_open" 
 			/> -->
 
